# OSNS

./: .gitignore  README.md
src/: Makefile.am  TODO  config.h  configure.ac  main.c  main.h  options.c  options.h  osns_client.c  osns_server.c  osns_sftp_subsystem.c  osns_sftp_subsystem.h  osns_socket.c  osns_socket.h
src/.deps/: sonssc-main.Po  sonssc-options.Po
src/autom4te.cache/: output.0  requests  traces.0  traces.1
src/client/: arguments.c  arguments.h  config.c  config.h  connect.c  connect.h  contexes.c  contexes.h  network.c  network.h  refresh.c  refresh.h  resources.c  resources.h  sftp-context.c  sftp-context.h  ssh-context.c  ssh-context.h  utils.c  utils.h  watch.c  watch.h  workspaces.c  workspaces.h
src/ctl/: options.c  options.h  print-netcache.c  print-netcache.h  send-netcache.c  send-netcache.h  send.c  send.h
src/datatypes/: ssh-string.c  ssh-string.h  ssh-uint.h
src/datatypes/.deps/: sonssc-ssh-string.Po  sonssc-ssh-uint.Po
src/discover/: discover.c  discover.h
src/fuse/: browse-fs.c  browse-fs.h  network.c  network.h  sftp-fs.c  sftp-fs.h  sftp.c  sftp.h  smb-fs.c  smb-fs.h  smb.c  smb.h  ssh.c  ssh.h  workspace-fs.c  workspace-fs.h
src/fuse/.deps/: sonssc-network.Po  sonssc-sftp-fs.Po  sonssc-sftp.Po  sonssc-ssh.Po
src/fuse/browse/: access.c  access.h  getattr.c  getattr.h  lookup.c  lookup.h  opendir.c  opendir.h  statfs.c  statfs.h  xattr.c  xattr.h
src/fuse/sftp/: access.c  access.h  fstatat.c  fstatat.h  getattr.c  getattr.h  handle.c  handle.h  inode-stat.c  inode-stat.h  lock.c  lock.h  lookup.c  lookup.h  mk.c  mk.h  open.c  open.h  opendir-symlink.c  opendir-symlink.h  opendir.c  opendir.h  path.c  path.h  realpath.c  realpath.h  rm.c  rm.h  setattr.c  setattr.h  statfs.c  statfs.h  symlink.c  symlink.h  xattr.c  xattr.h
src/fuse/shared/: access.c  access.h  name.c  name.h  statfs.c  statfs.h  xattr.c  xattr.h
src/fuse/smb/: access.c  access.h  getattr.c  getattr.h  lookup.c  lookup.h  opendir.c  opendir.h  readlink.c  readlink.h
src/fuse/workspace/: access.c  access.h  getattr.c  getattr.h  lookup.c  lookup.h  opendir.c  opendir.h  statfs.c  statfs.h  xattr.c  xattr.h
src/include/: osns-protocol.h
src/interface/: fuse.c  fuse.h  sftp-attr.c  sftp-attr.h  sftp-extensions.c  sftp-extensions.h  sftp-prefix.c  sftp-prefix.h  sftp-send.c  sftp-send.h  sftp-wait-response.c  sftp-wait-response.h  sftp.c  sftp.h  smb-enum-shares.c  smb-enum-shares.h  smb-eventloop.c  smb-eventloop.h  smb-signal.c  smb-signal.h  smb-utils.c  smb-utils.h  smb-wait-response.c  smb-wait-response.h  smb.c  smb.h  ssh-utils.c  ssh-utils.h  ssh.c  ssh.h
src/interface/.deps/: sonssc-fuse-utils.Tpo  sonssc-fuse.Po  sonssc-sftp-attr.Po  sonssc-sftp-extensions.Po  sonssc-sftp-prefix.Po  sonssc-sftp-send.Po  sonssc-sftp-wait-response.Po  sonssc-sftp.Po  sonssc-ssh-utils.Po  sonssc-ssh.Po
src/lib/: commonsignal.h  datatypes.h  discover.h  eventloop.h  fsnotify.h  fuse.h  interface.h  libosns-basic-system-headers.h  libosns-connection.h  libosns-context.h  libosns-datatypes.h  libosns-db.h  libosns-error.h  libosns-eventloop.h  libosns-fspath.h  libosns-fuse-public.h  libosns-fuse.h  libosns-interface.h  libosns-list.h  libosns-lock.h  libosns-log.h  libosns-misc.h  libosns-mountinfo.h  libosns-network.h  libosns-resource-client.h  libosns-resource.h  libosns-resources.h  libosns-sftp.h  libosns-sl.h  libosns-socket.h  libosns-ssh.h  libosns-system.h  libosns-users.h  libosns-workspace.h  list.h  logging.h  mime.h  misc.h  mountinfo.h  network.h  (+6 more)
src/lib/.deps/: sonssc-fuse-interface.Po
src/lib/commonsignal/: lock.c  lock.h
src/lib/connection/: compare.c  compare.h  connection.c  connection.h
src/lib/context/: context.c  context.h  init.c  init.h  lock.c  lock.h  next.c  next.h
src/lib/datatypes/: buffer.c  buffer.h  name-string.c  name-string.h  name.c  name.h  ssh-mpint.c  ssh-mpint.h  ssh-msg-buffer.c  ssh-msg-buffer.h  ssh-namelist.c  ssh-namelist.h  ssh-payload.c  ssh-payload.h  ssh-string.c  ssh-string.h  ssh-uint.c  ssh-uint.h
src/lib/db/: db.h  open.c  open.h  utils.c  utils.h
src/lib/discover/: avahi.c  avahi.h  discover-avahi.c  discover-fstree.c  discover-fstree.h  discover-staticfile.c  discover-staticfile.h  discover.c  discover.h  staticfile.c  staticfile.h
src/lib/error/: error-handling.c  error-handling.h
src/lib/eventloop/: bevent-write.c  bevent.c  (+10 more)
src/localsocket/: receive.c  send.c  send.h
src/osns/: client.c  client.h  common.h  control.c  control.h  hashtable.c  hashtable.h  init.c  init.h  mountcmd.c  mountcmd.h  netcache-read.c  netcache-read.h  netcache-send.c  netcache-send.h  pidfile.c  pidfile.h  receive.c  receive.h  record.c  record.h  reply.c  reply.h  send.c  send.h  setwatch-send.c  setwatch-send.h  utils.c  utils.h  write.c  write.h
src/sftp/: attr.c  attr.h  common-protocol.h  common.c  common.h  context.c  context.h  extensions.c  extensions.h  init.c  init.h  protocol-v03.h  protocol-v04.h  protocol-v05.h  protocol-v06.h  recv.c  recv.h  request-hash.c  request-hash.h  send.c  send.h  time.c  time.h  usermapping.c  usermapping.h  utils.c  utils.h
src/ssh/: ssh-channel.h  ssh-common-client.c  ssh-common-client.h  ssh-common-protocol.c  ssh-common-protocol.h  ssh-common.c  ssh-common.h  ssh-data.c  ssh-data.h  ssh-datatypes.h  ssh-extensions.h  ssh-hash.h  ssh-hostinfo.c  ssh-hostinfo.h  ssh-keyexchange.h  ssh-language.c  ssh-language.h  ssh-pk.h  ssh-pubkey.c  ssh-pubkey.h  ssh-send.h  ssh-server.c  ssh-server.h  ssh-signal-client.c  ssh-signal-client.h  ssh-signal-server.c  ssh-signal-server.h  ssh-signal.c  ssh-signal.h  ssh-userauth.c  ssh-userauth.h  ssh-utils.c  ssh-utils.h
src/system/: avahi-detect.c  avahi-detect.h  fuse.c  fuse.h  mount.c  mount.h  mountcmd.c  mountcmd.h  netcache-write.c  netcache-write.h  netcache.c  netcache.h  query-filter.c  query-filter.h  query-mountinfo.c  query-mountinfo.h  query-netcache-filter.c  query-netcache-filter.h  query-netcache.c  query-netcache.h  query.c  query.h  receive.c  receive.h  server.c  server.h  setwatch-netcache.c  setwatch-netcache.h
(+1007 files in other folders)
